# IBVS_with_OMCS_OTG

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: jr603_fd_ibvs_ctrlV0_pos_socket.launch  jr603_fd_ibvs_ctrlV1_pos_socket.launch  jr603_ibvs_pos_socket.launch  jr603_ibvs_pos_with_ruckig_socket.launch  jr603_ibvs_test.launch  jr603_mpc_ibvs_ctrlV4_pos_socket.launch  jr603_mpc_ibvs_ctrlV5_pos_socket.launch  jr603_mpc_ibvs_ctrlV6_pos_socket.launch  jr603_mpc_ibvs_pos_socket.launch  jr603_pid_test.launch  jr603_velocity_ethercatV0.launch  jr603_velocity_test.launch  jr603_velocity_test_V2.launch  jr603_velocity_with_ruckig_etharcatV0.launch  jr603_velocity_with_ruckig_etharcatV1.launch  jr603_velocity_with_ruckig_etharcatV2.launch  jr603_velocity_with_ruckig_etharcatV3.launch  jr603_velocity_with_ruckig_etharcatV4.launch  mpc_config.yaml
msg/: AprilTagCorners.msg  HomogeneousTransform.msg  PixelCoordinates.msg
scripts/: angle(3).txt  angle1.txt  angle2.txt  apriltag_detect.py  d435_color.py  d435_depth.py  d435_init.py  dh.py  ethercat_socket_deiver.py  ethercat_socket_driver.py  fkine_6dof.py  ikine_jr603.py  jacob_cross_SDH.py  jr603_client.py  jr603_ctrl.py  jr603_ctrl_single.py  jr603_get_joints_pos.py  jr603_get_joints_pos_with_ethercat.py  jr603_get_joints_state_pub.py  jr603_get_joints_velocity.py  jr603_get_joints_velocity_ethercat.py  jr603_get_joints_velocity_ethercatV1.py  jr603_init.py  jr603_jacob.py  jr603_jacob_test.py  jr603_joints_pos_with_ruckig.py  jr603_pid_ctrl.py  jr603_socket_ethercatV1.py  jr603_socket_ethercatV2.py  jr603_socket_ethercatV3.py  jr603_velocity_ethercat_testV0.py  jr603_velocity_ethercat_velocityV0.py  jr603_velocity_ethercat_velocityV1.py  jr603_velocity_test.py  mycobot_init.py  pid_ctrl.py  pose2T.py  scripts  socket_cmd.py  socket_ethercat.py  (+19 more)
scripts/lys_python_sdk/: Trajectory.py  arc_itpl.py  aruco_detect.py  calcST.py  compare_T.py  coords_pub.py  csdn_ink1.py  demo.py  dh.py  elephant_robot.py  error.txt  euler_to_quaternion.py  eulur_to_quater_zyx.py  fkine.py  fkine_6dof.py  fkine_6dof_mdh.py  gpt.py  ikine_algebra.py  ikine_demo.py  ikine_nm.py  image_jacobian.py  inversKinematics.py  inverseKinematic.py  jacob_cross_SDH.py  matrix_dh.py  mycobot_init.py  newton_method_fdiff.py  s_curve.py  socket_getJntData.py  socket_moveTo.py  speed_control.py  t_velocity_ctl.py  target_T.py  test.py  test_T.py
src/: camera_sub.cpp  jr603_IBVS.cpp  jr603_fd_ibvs_ctrlV1.cpp  jr603_ibvs_ctrl.cpp  jr603_ibvs_ctrlV0.cpp  jr603_mpc_ibvs_ctrlV0.cpp  jr603_mpc_ibvs_ctrlV1.cpp  jr603_mpc_ibvs_ctrlV4.cpp  jr603_mpc_ibvs_ctrlV5.cpp  jr603_mpc_ibvs_ctrlV6.cpp  jr603_pid_ctrl.cpp  jr603_pos_with_otg.cpp  jr603_velocity_with_otg.cpp  jr603_velocity_with_otgV1.cpp  main.cpp  mpc_ibvs_controller.cpp  mpc_ibvs_controller.hpp  mpc_ibvs_controllerV1.cpp  mpc_ibvs_controllerV1.hpp  mpc_ibvs_controllerV2.cpp  mpc_ibvs_controllerV2.hpp  mpc_ibvs_controllerV3.cpp  mpc_ibvs_controllerV3.hpp  mpc_ibvs_controllerV4.cpp  mpc_ibvs_controllerV4.hpp  otg.cpp  pid.cpp  ruckig_pos_mode.hpp  ruckig_velocity_min_duration.hpp  test_visp_realsence.cpp
srv/: SendCommand.srv
